# meal-planner-ai

./: .gitignore  README.md
.github/workflows/: backend_ci.yml  frontend_ci.yml
backend/: pyproject.toml  requirements.txt
backend/cloudrun/bq_uplode/: Dockerfile  bq_uplode.py  requirements.txt
backend/cloudrun/flyer_image_processor/: .env  Dockerfile  flyer_image_processor.py  requirements.txt
backend/cloudrun/flyer_image_processor/secrets/: dal-ai-agent-hackathon-firebase-adminsdk-fbsvc-c51ab0ef20.json
backend/cloudrun/image_processor/: Dockerfile  image_processor.py  requirements.txt
backend/cloudrun/menu_image_generate/: Dockerfile  menu_image_generate.py
backend/notebooks/: menu_generator.ipynb
backend/src/meal_planner_api/: main.py  menu_generator.py
backend/src/meal_planner_api/notebooks/: image_processor.ipynb  menu_generator.ipynb
backend/src/meal_planner_api/shrared/: gemini_processor.py  image_processor.py
frontend/: .firebaserc  README.md  firebase.json  pubspec.yaml
frontend/.firebase/: hosting.YnVpbGQvd2Vi.cache  hosting.YnVpbGRcd2Vi.cache  hosting.cHVibGlj.cache  hosting.cHVibGljXHdlYg.cache
frontend/android/app/: google-services.json
frontend/functions_submit_demo/: Dockerfile  cloudbuild.yaml  key.json  package.json  submit_demo.js
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: firebase_options.dart  flyer_upload_page.dart  input_form_page.dart  loading_page.dart  main.dart  recipe_suggestions_page.dart
lib/: main.dart
temp-build/: .env  Dockerfile  requirements.txt
temp-build/app/: app.py
(+2 files in other folders)
