[project]
name = "meal-planner-ai"
version = "0.1.0"
description = "AI-powered meal planning system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "google-cloud-aiplatform>=1.42.0",
    "google-generativeai>=0.3.2",
    "pandas>=2.2.0",
    "pandas-gbq>=0.29.0",
    "pyarrow>=10.0.1",
    "python-dotenv>=1.0.1",
    "Pillow>=10.2.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "ipython>=8.22.1,<9.0.0",
    "jupyter>=1.0.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true 